<resources>
    <string name="app_name">Plink</string>
    <string name="set">Set</string>
    <string name="fetch">Fetch</string>
    <string name="send_password">Send Password</string>
    <string name="todo">TODO</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="new_profile">New Profile</string>
    <string name="stop_service">Stop Service</string>
    <string name="manage_profiles">Manage Profiles</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="start_service">Start Service</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="a_profile_changing_app">A Profile Changing App</string>
</resources>
