<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context="com.example.windows.plink.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="40dp">

            <android.support.v7.widget.CardView
                android:id="@+id/loginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/card_background"
                android:elevation="4dp"
                app:cardCornerRadius="2dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="25dp"
                        android:src="@drawable/user"
                        android:contentDescription="@string/todo" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp">

                        <AutoCompleteTextView
                            android:id="@+id/editUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:hint="@string/mobile_number"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:textColor="#000000" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="20dp">

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-condensed"
                            android:hint="@string/password"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textColor="#000000" />

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorAccent"
                        android:elevation="4dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/login"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:onClick="login_click"/>

                    <Button
                        android:id="@+id/forgetPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center_horizontal"
                        android:text="@string/forgot_password"
                        android:onClick="forget_password"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register"
        android:textColor="#fff"
        android:textStyle="bold"
        android:onClick="register_click"/>
</RelativeLayout>
