<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:background="@drawable/bg3"
    tools:context="com.example.windows.plink.HomeActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        app:cardCornerRadius="2dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"
            android:elevation="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/welcome"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:onClick="start_click"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/play"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/start_service"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/btn_stop_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/stop"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/stop_service"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:onClick="createNew"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/create_new_profile"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:onClick="profileList"
                android:elevation="4dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:src="@drawable/manage"
                    android:padding="10dp"
                    android:tint="@color/white"
                    android:background="@color/colorAccent"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/manage_profiles"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/log_out"
        android:textColor="#fff"
        android:textStyle="bold"
        android:onClick="logout"/>
</RelativeLayout>
