<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg3"
    tools:context="com.example.windows.plink.ForgotPasswordActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="16dp">

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user"
            android:contentDescription="@string/todo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/fmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:hint="@string/enter_registered_mobile_number"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="10"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/send_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:onClick="forget_pass"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
